# cdd-render

./: .gitattributes
backend/: .env  app.py  chicken_disease_model.h5  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.js
backend/models/: DiseaseResult.js
backend/routes/: diseaseRoutes.js
cdd/: App.js  app.json  class_indices.npy  load_dataset.py  package-lock.json  package.json  preprocess_data.py  react-native-fs.js  send_image.py  train_model.py
cdd/services/: api.js
cdd/src/navigation/: AppNavigator.js
cdd/src/views/: MainView.js  MapViewScreen.js
